@@ -1,5 +1,10 @@
 use strict;
 use warnings;
 
-use Test::More tests => 1;
+use Test::More;
+
+system('unzip');
+skip "unzip not found, but a path could be specified when creating the instance of Qiime2::Artifact\n" if ($?);
 use_ok 'Qiime2::Artifact';
+
+done_testing();
